syntax = "proto3";

package AuthServicePackage;

// Service definition
service AuthService {
  rpc login(LoginRequest) returns (LoginResponse);
  rpc register(RegisterRequest) returns (EmptyResponse);
  rpc refresh(RefreshRequest) returns (RefreshResponse);
  rpc validateToken(validateTokenRequest) returns (EmptyResponse);
}

message EmptyResponse {}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginUserResponseObject {
  string username = 1;
  string email = 2;
}

message LoginResponse {
  string accessToken = 1;
  string refreshToken = 2;
  LoginUserResponseObject user = 3;
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message RefreshRequest {
  string refreshToken = 1;
}

message RefreshResponse {
  string accessToken = 1;
  string username = 2;
  string email = 3;
}

message validateTokenRequest {
  string accessToken = 1;
}